# stim-server

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  guard.yml
docs/contracts/: product-message-ledger.md
scripts/: guard.py
src/: app.rs  handler.rs  lib.rs  openapi.rs  schema.rs  state.rs  store.rs
src/store/: agent.rs  chat.rs  endpoint.rs
tests/: agent_registry_api.rs  chat_ledger_api.rs  discovery_api.rs
