[package]
name = "stim-server"
version = "0.1.0-dev.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
axum = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stim-proto = { path = "../stim-proto/crates/stim-proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[workspace]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
